--- a/code/style.css
+++ b/code/style.css
@@ -1,150 +1,209 @@
-Body {
-    /* background: #B0E0E6; */
-    background: #ecf2f7;
-    margin: 0;
-}
-
-#read_more {
-    display: none;
-}
-
-h1 {
-    margin-left: 100px;
-}
-
-header {
-    /* width: 100%; */
-    /* background: #B0C4DE; */
-    background: #c7d9e8;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    padding: 0 20px;
-}
-
-
-/* header img {
-    width: 100px;
-    height: 100px;
-} */
-
-nav {
-    margin-right: 50px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    margin-left: 20px;
-}
-
-
-/* Big News section */
-
-.big-news {
-    /* width: 100%; */
-    height: auto;
-    display: flex;
-    /* margin: 50px; */
-    justify-content: center;
-    align-content: flex-start;
-}
-
-.big-news-box1 {
-    width: 40%;
-    /* height: auto; */
-    background: #dae6f0;
-    margin: 30px;
-    padding: 10px;
-    box-sizing: border-box;
-    /* flex-shrink: 1; */
-    box-shadow: 0 10px 10px #999;
-    transition: box-shadow 0.3s ease;
-    display: flex;
-}
-
-.big-news-box2 {
-    width: 60%;
-    /* height: auto; */
-    background: #dae6f0;
-    margin: 50px;
-    padding: 10px;
-    box-sizing: border-box;
-    /* flex: 3; */
-    box-shadow: 0 10px 10px #999;
-    transition: box-shadow 0.3s ease;
-}
-
-.big-news-box1 img {
-    max-height: 300px;
-    width: 100%;
-    /* align-self: center; */
-}
-
-
-/* Hover effect for the boxes */
-
-.big-news-box1:hover,
-.big-news-box2:hover,
-.news-box:hover {
-    box-shadow: 5px 10px 10px #999;
-}
-
-
-/* Other news section */
-
-.other-news {
-    width: 100%;
-    height: auto;
-    display: flex;
-    margin-top: 50px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.news-box {
-    width: 20%;
-    height: auto;
-    background: #dae6f0E6;
-    margin: 20px;
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 0 10px 10px #999;
-    transition: box-shadow 0.3s ease
-}
-
-.news-box img {
-    height: 200px;
-    width: 100%;
-}
-
-.other-news h2 {
-    text-align: center;
-}
-
-@media screen and (max-width: 1024px) {
-    .news-box {
-        width: 40%;
-    }
-    header {
-        justify-content: space-around;
-    }
-}
-
-@media screen and (max-width:668px) {
-    .news-box {
-        width: 90%;
-    }
-    .big-news {
-        flex-direction: column;
-    }
-    .big-news-box1,
-    .big-news-box2 {
-        width: 90%;
-    }
-    nav {
-        font-size: 13px;
-    }
-}
+        /* html {
+            position: relative;
+            min-height: 100%;
+        } */
+        
+        body {
+            /* background: #B0E0E6; */
+            background: #dae6f0;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+        }
+        /*------------ header---------------- */
+        
+        header {
+            /* width: 100%; */
+            background: #c7d9e8;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 100px;
+            padding: 0 20px;
+        }
+        
+        .hamburger {
+            display: none;
+            width: 30px;
+            height: 30px;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-right: 24px;
+        }
+        
+        .hamburger div {
+            width: 30px;
+            height: 5px;
+            background: #fff;
+        }
+        
+        nav {
+            margin-right: 50px;
+        }
+        
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            margin-left: 20px;
+            font-size: 20px;
+            color: #1761a0
+        }
+        /*--------------main--------------------*/
+        
+        .wrapper {
+            position: relative;
+            min-height: 100%;
+        }
+        
+        .info {
+            width: 100%;
+            height: auto;
+            display: flex;
+            /* margin: 50px 100px; */
+            /* justify-content: space-between; */
+        }
+        
+        .info img {
+            max-height: 500px;
+            width: 70%;
+            /* align-self: center; */
+        }
+        
+        .info .text {
+            align-self: center;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            width: 30%;
+            /* font-size: 0.5em; */
+        }
+        
+        .btn {
+            background: #f0a418;
+            padding: 10px;
+            color: #fff;
+            margin-left: auto;
+            border-radius: 15px;
+            color: #1761a0;
+            /* align-self: center; */
+        }
+        
+        .destinations {
+            width: 100%;
+            height: auto;
+            margin-top: 40px;
+            display: flex;
+            /* margin: 20px; */
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        
+        .destination-box {
+            width: 20%;
+            height: auto;
+            background: #ecf2f7;
+            margin: 20px;
+            padding: 10px;
+            box-sizing: border-box;
+            box-shadow: 0 10px 10px #999;
+            transition: box-shadow 0.3s ease
+        }
+        
+        .destination-box:hover {
+            box-shadow: 5px 10px 10px #999;
+        }
+        
+        .destination-box img {
+            height: 200px;
+            width: 100%;
+        }
+        
+        .destinations h2 {
+            text-align: center;
+        }
+        
+        .staycation {
+            /* border: 2px solid blue; */
+            height: 200px;
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            /*1fr 1fr 1fr 1fr 1fr 1fr; */
+            margin-top: 100px;
+            margin-bottom: 100px;
+            background: #ecf2f7;
+            grid-gap: 5px;
+        }
+        
+        .staycation .grid2 {
+            padding-left: 50px;
+            text-align: center;
+        }
+        
+        .staycation img {
+            width: 100%;
+            height: 200px;
+        }
+        /* ------------footer----------------- */
+        
+        footer {
+            background: #c7d9e8;
+            height: 50px;
+            text-align: center;
+            padding: 10px 0;
+            color: #1761a0;
+            width: 100%;
+            justify-content: center;
+            margin-top: 100px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+        }
+        
+        footer span {
+            color: #f0a418;
+        }
+        /*---------------- Media queries----------------- */
+        /* media query for tablets */
+        
+        @media screen and (max-width: 1024px) {
+            .destination-box {
+                width: 40%;
+            }
+            header {
+                justify-content: space-around;
+            }
+            .staycation {
+                grid-template-columns: repeat(3, 1fr);
+                /* grid-template-rows: 2; */
+            }
+        }
+        /* media query for mobile phones */
+        
+        @media screen and (max-width:668px) {
+            /* .destination-box {
+        width: 35%;
+    } */
+            .info {
+                flex-direction: column;
+            }
+            .info img {
+                width: 100%;
+            }
+            .info .text {
+                width: 100%;
+                /* margin-left: 40px; */
+            }
+            nav {
+                display: none;
+            }
+            .hamburger {
+                display: flex;
+            }
+            header {
+                justify-content: space-between;
+            }
+            .staycation {
+                grid-template-columns: 1fr;
+                /* grid-template-rows: 2; */
+            }
+        }
