--- a/code/style.css
+++ b/code/style.css
@@ -1,232 +1,281 @@
 html {
-  background: #fff;
+  background: #eee;
 }
 
 body {
-  margin: 0;
+  margin: 0  0 96px 0;
 }
 
 
 h1 {
   font-family: Raleway;
-  font-size: 1.5rem;
-  font-weight: 200;
+  font-size: 1rem;
+  font-weight: 600;
   color: #333;
   margin-left: 10px;
 }
 
 h2 {
-  font-size: 40px;
-  line-height: 46px;
+  font-size: 2rem;
+  line-height: 2.5rem;
   color: #333;
+  margin-top: 1.3rem;
 }
 
 h3 {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: #333;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 p {
-  font-size: 1.125rem;
-  line-height: 1,5rem;
+  font-size: 1rem;
+  font-family: Raleway;
+  line-height: 1.5rem;
+  font-weight: 200;
   color: #333;
 }
 
+.header {
+    display: flex;
+    padding: 1rem 0.5rem 0 1rem;
+    justify-content: space-between;
+  }
+
+
 a {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 600;
+  font-family: Raleway;
   color: #333;
   text-decoration: none;
 }
 
-.navigation a {
-  font-size: 1rem;
-  margin-left: 24px;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; 
-  padding: 1.5rem 2rem 1.5rem 2rem;
-}
-
-
-.footer {
-  position: fixed;
-  padding: 1rem 2rem 1rem 2rem;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #fff;
-  color: white;
-}
-
+.button-link a {
+    color: #fff;
+  }
 
 .button-link {
-  font-size: 14px;
+  font-size: 1rem;
   text-align: center;
   color: #fff;
   background: rgb(224, 124, 9);
   text-decoration: none;
   border-radius: 50px;
-  padding: 12px 24px;
-  min-width: 185px;
+  padding: 12px 16px;
+  min-width: 96px;
+  margin-right: 0.5rem;
 }
 
 
 .technigo-logo {
-  width: 64px;
+    width: 40px;
 }
+
 
 .fox-logo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.the-fox{
+  height: 44px;
+  width: auto;
+}
+
+.navigation {
+    display: none;
+  }
 
 .big-news-container {
-  display: flex;
-  justify-content: space-between;
-  background-color: #fff;
-
+   display: flex;
+   flex-direction: column;
+   margin-left: 1rem;
+   margin-right: 1rem;
+   margin-top: 1.2rem;
+  
 }
 
+
 .big-news-img {
-  /* width: 50% */
-  object-fit: cover;
+   width: 100%;
+   height: auto;
 }
 
 
 .big-news-text {
-  margin-right: 64px;
-  margin-left: 64px;
-}
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+  }
 
-
-.big-news-link {
-  font-size: 1,5 rem;
-  font-weight: 600;
-  color: #333;
-}
 
 .word-color-change {
-  color: #bb000c
-}
-
-.small-news-container {
-  display: grid;
-  grid-template-columns:  1fr 1fr 1fr 1fr;
-
-  /* display: flex; */
-  /* justify-content: space-between; */
-  flex-wrap: wrap;
-}
-
-.small-news-item {
-  /* width: 22%; */
-  width:90%;
-}
-
-.small-news-img {
-  width: 100%;
-}
-
-
-/* media queries */
-
-@media (min-width: 768px) {
-  .big-news-container {
-    flex-direction: row;
-    margin-top: 48px;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-
-  .big-news-img {
-    width: 50%;
-    }
-
-    .small-news-container {
-      /* flex-direction: row; */
-      margin-top: 48px;
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
+    color: #bb000c
   }
 
 
-  @media (min-width: 768px) and (max-width: 991px) {
-
-    .big-news-img {
-      width: 60%;
-      height: 400px;
-      /* object-fit: cover; */
-      
-    }
-
-    .small-news-container {
-      /* flex-flow: row-wrap; */
-      grid-template-columns:  1fr 1fr;
-   }
-
-   /* .small-news-item {
-    width: 100%
-   } */
-  }
- 
-
-@media (max-width: 767px) {
-
-  .header {
-    padding: 1rem 1rem 1rem 1rem;
+  .small-news-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 
-    .big-news-container {
-      flex-direction: column;
-      margin-top: 32px;
-      margin-left: 1rem;
-      margin-right: 1rem;
-    
-    }
-    .big-news-img {
-      width: 100%;
-    }
 
-    .big-news-text {
-      margin-left: 1rem;
-      margin-right: 1rem;
-    }
+  .small-news-item {                      
+    width: 100%;
+    margin-top: 1rem;
+    background-color: #fff;
+  }
 
-    .small-news-container {
-      /* flex-direction: column; */
-      grid-template-columns: 1fr;
-      margin-top: 32px;
-      margin-left: 1rem;
-      margin-right: 1rem;
-      /* flex-flow: row-wrap; */
-    }
 
-    .small-news-item {
-      width: 100%;
+  .small-news-img {
+    width: 100%;
+  }
+
+
+.footer {
+    position: fixed;
+    padding: 1rem;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f8f8f8;
+  }
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+    /* .small-news-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0 20px;
+    } */
+
+    .header {
+      align-items: center; 
+      padding: 1.5rem 1rem 1.5rem 1rem;
+  }
+
+  .button-link {
+    padding: 20px 20px;
+    min-width: 110px;
+    margin-right: 0;
+  }
+
+  h1{
+    font-size: 1.5rem;
+  }
+
+    h2 {
+      font-size: 3rem;
+      line-height: 3.2rem;
       margin-top: 2rem;
+
     }
 
-    .small-news-img: {
-      width: 100%;
+    p {
+      font-size: 1.175rem;
+      line-height: 2rem;
     }
-   
 
-    .footer {
-      padding: 1rem;
+    .small-news-container {
+        grid-template-columns:  1fr 1fr;
+        flex-wrap: wrap;
+        gap: 0 1rem;
+    }
+
+    .the-fox{
+      height: px;
+      width: auto;
+    }
+
+}
+
+
+@media (min-width: 991px) {
+
+    .header {
+        align-items: center; 
+        padding: 1.5rem 2rem 1.5rem 2rem;
     }
 
     .technigo-logo {
-      width: 40px;
+        width: 64px;
+      }
+
+    .button-link {
+        padding: 20px 24px;
+        min-width: 185px;
+        margin-right: 0;
+      }
+
+
+    .button-link:hover {
+       color: #f8f8f8;
+       background-color: rgb(187, 111, 25);
+      }
+
+    h2 {
+      font-size: 3rem;
+      line-height: 3.2rem;
+
     }
 
-  }
+    h3:hover{
+        color: rgb(201, 115, 16);
+    }
+    
+    a:hover {
+        color: rgb(201, 115, 16);
+    }
+    
+    .navigation a {
+        font-size: 1rem;
+        margin-left: 24px;s
+    }
 
+    .big-news-container {
+        justify-content: space-between;
+        flex-direction: row;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .big-news-text {
+        margin-right: 3rem;
+        margin-left: 3rem;
+      
+    }
+
+    .big-news-img {
+        width: 50%
+        /* object-fit: cover; */
+    }
+
+    .small-news-container {
+        grid-template-columns:  1fr 1fr 1fr 1fr;
+        flex-wrap: wrap;
+        margin-top: 48px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .small-news-item {
+        width:85%;
+        margin-bottom: 1rem;
+        
+    }
+
+    .small-news-item:hover {
+        box-shadow: 0.1rem 0.1rem #cccc;
+    }
+ 
+    .footer {
+        padding: 1rem 2rem 1rem 2rem;
+      
+    }
