--- a/code/style.css
+++ b/code/style.css
@@ -100,7 +100,7 @@ nav a:hover {
 	border-top: 3px solid #f8503b;
 }
 main {
-	padding: 0px 10px 0px 10px;
+	padding: 0px 10px 10px 10px;
 }
 .big-news-container {
 	gap: 5px;
@@ -108,6 +108,7 @@ main {
 	padding: 5px;
 	background-color: #f6f6f6;
 	border-top: 3px solid #ab0614;
+	box-shadow: 0px 2px 8px -1px #000000;
 	/* max-height: 60vh; */
 }
 .big-news-card-img {
@@ -126,6 +127,7 @@ main {
 	background-color: #f6f6f6;
 	border-top: 2px solid #ab0614;
 	padding: 5px;
+	box-shadow: 0px 2px 8px -1px #000000;
 }
 .small-news-card:hover,
 .big-news-container:hover {
@@ -141,7 +143,8 @@ main {
 	height: 75px;
 	overflow: hidden;
 }
-.small-news-title {
+.small-news-title,
+.big-news-title {
 	color: #ab0614;
 	margin: 0px;
 	font-family: 'Playfair Display', serif;
@@ -149,12 +152,16 @@ main {
 }
 footer,
 footer a {
+	font-family: 'Open Sans', sans-serif;
 	background-color: #052963;
 	color: #feffff;
 }
 footer {
 	align-items: center;
-	height: 60px;
+	height: 100px;
+}
+footer a {
+	font-size: 0.6rem;
 }
 
 @media (min-width: 768px) {
@@ -168,7 +175,6 @@ footer {
 	a.last-nav {
 		border-left: 1px solid #405e93;
 		border-right: 1px solid #405e93;
-		padding-left: none;
 	}
 	.big-news-container,
 	.small-news-container {
