--- a/code/style.css
+++ b/code/style.css
@@ -1,18 +1,16 @@
 /* GENERAL STYLING */
 
-
 a {
     all: unset;
-  }
+}
 
-  body {
+body {
 
     background-color: rgb(242, 230, 243);
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
-  
-  }  
+
+}  
 
 p {
     font-family: 'Noto Serif', serif;
@@ -27,7 +25,7 @@ h1 {
     font-family: roboto slab;
     margin: 0;
     font-size: 1.5rem;
-    }
+ }
 
 h2 {
     margin: 0;
@@ -38,7 +36,6 @@ h2 {
     line-height: 27px;
     color: #E4C1F9;
     display: inline;
-
 }
 
 h3 {
@@ -53,8 +50,7 @@ h3 {
 }
 
 
-/* HEADER */
-
+/* HEADER SECTION */
 
 .header {
 
@@ -64,32 +60,32 @@ h3 {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-  }
+}
 
   /* Styling for ALL children */
-  .header > * {
+.header > * {
 
     flex: 1;
     flex-grow: 1;
 
-  }
+}
 
-/* Individual stylings */
+/* Individual header section stylings */
 
 .logo {
 
     align-content: center;
     padding-left: 2rem;
     padding-right: 2rem;
-
 }
+
 .header img {
     flex: 1;
     max-width: 100%;
     align-content: center;
     display: inline-flex;
-
 }  
+
 .header p {
 
     font-family: Roboto;
@@ -98,18 +94,17 @@ h3 {
     font-size: 1.3rem;
     color: #000000;
     margin: 0;
-  
-  }
+}
 
-  .weather {
+.weather {
+    /* actually date and time just forgot to rename */
     text-align: end;
     font-family: Noto Sans;
     font-style: normal;
     font-weight: 500;
     font-size: 1rem;
     color: #a584b8;
-
-  }
+}
 
 .menu {
 
@@ -148,7 +143,6 @@ h3 {
 
 }
 
-
 .nav-list li:hover {
     color: #d1641b;
     cursor: cell;
@@ -170,82 +164,84 @@ h3 {
     color: #9055A2;
 }
 
- /* 1 */ .topstories-full-container {
+ /* Start of top-section, the colored big block w. "top stories" text strip*/ 
+.topstories-full-container {
 
-        background-color: #E4C1F9;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin: 0.6rem;
-        height: 550px;
-    }
+    background-color: #E4C1F9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0.6rem;
+    height: 550px;
+}
 
- /* 2 */ .topstories-section-container  {
 
-        display: flex;
-        flex: 1;
-        flex-direction: column;
-        height: 89%;
-        width: 100%;
-    }
+ /* The section containing 1 img and 1 text block, the children are both called top-section. */ 
+ 
+.topstories-section-container  {
 
-        /* CHILDREN */ .topstories-section-container > * {
-        flex-grow:1;
-    }
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    height: 89%;
+    width: 100%;
+}
 
-    .top-img {
-        flex: 1;
-        object-fit: cover;
-        /* height: 100%; */
-        max-width: 100%;
+/* CHILDREN */ .topstories-section-container > * {
+    flex-grow:1;
+}
 
-    }
-    .top-section {
+.top-img {
+    flex: 1;
+    object-fit: cover;
+    /* height: 100%; */
+    max-width: 100%;
+}
 
-        background-color: #9055A2;
-        display: flex;
-        width:100%;
-        height: 50%;
+.top-section {
 
-        }
+    background-color: #9055A2;
+    display: flex;
+    width:100%;
+    height: 50%;
 
-    
-    .text-top {
+}
 
-        margin: 1rem;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: left;
+.text-top {
 
-        } 
+    margin: 1rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
 
-    .top-btn {
+} 
+
+.top-btn {
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 800;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #21122e;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    cursor: cell;
+    /* width: 278px; */
+    height: 45px;
+    border-radius: 4px;
+    transition: transform 0.5s;
+}
+
+.top-btn:hover {
+    background: #FA8334;
+    transform: scale(1.05);
+}
         
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 800;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        background: #21122e;
-        border: none;
-        outline: none;
-        font-size: 16px;
-        cursor: cell;
-        /* width: 278px; */
-        height: 45px;
-        border-radius: 4px;
-        transition: transform 0.5s;
-        }
-        
-        .top-btn:hover {
-            background: #FA8334;
-            transform: scale(1.05);
-        }
-        
-
     
 /* OTHER STORIES */
 
@@ -258,7 +254,6 @@ h3 {
     align-content: space-between;
     justify-content: space-around;
     width: 100%;
-    /* height: 450px; */ 
 }
 
 .card-img {
@@ -272,7 +267,6 @@ h3 {
 
 }
 
-
 .card {
     background-color: rgba(228, 193, 249, 0.5);
     flex: 1;
@@ -284,7 +278,6 @@ h3 {
     min-width: 47%;
     height: 400px; 
     transition: all 0.5s;
-
 
 }
 
@@ -301,6 +294,7 @@ h3 {
     height: 40%;
     padding-bottom: 2rem;
 }
+
 .timestamp {
     color: #9055A2;
     font-family: noto sans;
@@ -320,8 +314,6 @@ h3 {
     
     }
 
-
-  /* "unwanted news"-part */
     .header p {
         padding: 1rem;
         font-size: 1rem;
@@ -336,7 +328,6 @@ h3 {
         background-color: #21122e;
         height: 8px;
         padding: 1rem;
-    
     }
     
     .nav-list {
@@ -347,12 +338,10 @@ h3 {
         gap: 3%;
     }
 
-
     .nav-list li {
 
         font-size: 0.8rem;
     }
-
 
     h2 {
 
@@ -382,8 +371,8 @@ h3 {
     }
 
     h3 {
-    font-size: 1rem;
-    padding: 1rem;
+        font-size: 1rem;
+        padding: 1rem;
     }
 
     .timestamp {
@@ -410,23 +399,21 @@ h3 {
     }
 }
 
-
 @media all and (min-width:481px) and (max-width:768px) {
 
     .logo {
-
         align-content: center;
         padding-left: 2rem;
         padding-right: 2rem;
-    
     }
+
     .header img {
         flex: 1;
         max-width: 70%;
         align-content: center;
         display: inline-flex;
-    
     }  
+
     .header p {
 
         padding-top: 1rem;
@@ -442,10 +429,8 @@ h3 {
 
     }  
     
-
-    
-
     .menu {
+
         height: 12px;
         display: flex;
         flex-wrap: wrap;
@@ -498,12 +483,6 @@ h3 {
         margin-right: 1.3rem;
     }
 
-
-    .top-btn {
-        
-        
-        }
-
     .other-stories-container {
         margin-top: 1rem;
     }
@@ -530,12 +509,6 @@ h3 {
 
 }
 
-/* 
-320px — 480px: Mobile devices.
-481px — 768px: iPads, Tablets.
-769px — 1024px: Small screens, laptops.
-1025px — 1200px: Desktops, large screens.
-1201px and more — Extra large screens, TV. */
 
 @media all and (min-width:769px) and (max-width:1024px) {
 
@@ -565,10 +538,8 @@ h3 {
 
         padding-left: 2rem;
         padding-right: 1.3rem;  
-
     }  
-    
-        
+       
     .menu {
 
         display: flex;
@@ -593,11 +564,9 @@ h3 {
         
     }
    
-
     .nav-list li {
 
         gap: 8%;
-
     }
 
     .topstories-full-container   {
@@ -610,6 +579,7 @@ h3 {
 
         font-size: 1.5rem;
     }
+
     .top-section {
         justify-content: center;
     }
@@ -632,15 +602,11 @@ h3 {
         margin-right: 1.3rem;
     }
 
-
     .top-btn {
 
         height: 60px;
         width: 500px;
-
-        }
-
-
+    }
 
     .other-stories-container {
         margin: 0.5rem;
@@ -652,7 +618,6 @@ h3 {
         width: 100%;
         gap: 1rem;
     }
-
     
     .card {
         flex: 1;
@@ -667,23 +632,17 @@ h3 {
     }
 
     .card-text {
-
         padding-bottom: 1.4rem;
     }
 
     .timestamp {
-
         padding-top: 1.2rem;
         font-size: 0.8rem;
-
     }
-
 
 }
 
 
-/* 1025px — 1200px: Desktops, large screens.
-1201px and more — */
 @media all and (min-width:1025px) and (max-width:1500px) {
 
     .logo {
@@ -691,17 +650,16 @@ h3 {
         align-content: center;
         padding-left: 2rem;
         padding-right: 2rem;
-    
     }
+
     .header img {
         flex: 1;
         max-width: 50%;
         align-content: center;
         display: inline-flex;
-    
     }  
-    .header p {
 
+    .header p {
         padding-top: 1rem;
         padding-left: 2rem;
         padding-right: 2rem;
@@ -709,13 +667,10 @@ h3 {
     }
 
     .weather {
-
         padding-left: 2rem;
         padding-right: 1.3rem;  
-
     }  
     
-        
     .menu {
 
         display: flex;
@@ -726,7 +681,6 @@ h3 {
         background-color: #21122e;
         height: 20px;
         padding: 1rem;
-
     }
 
     .nav-list {
@@ -736,25 +690,21 @@ h3 {
         margin-left: 1.2rem;
         padding: 0;
         list-style: none;
-        gap: 8%;
-        
+        gap: 8%;   
     }
 
     .nav-list li {
-
         gap: 8%;
-
     }
-    /* 1 */ .topstories-full-container {
-
-
+    
+    .topstories-full-container {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         margin: 0.6rem;
     }
 
-    /* 2 */ .topstories-section-container  {
+    .topstories-section-container  {
 
         display: flex;
         flex: 1;
@@ -762,7 +712,7 @@ h3 {
         width: 100%;
     }
 
-        /* CHILDREN */ .topstories-section-container > * {
+    .topstories-section-container > * {
         flex-grow:1;
     }
 
@@ -775,7 +725,6 @@ h3 {
 
         font-size: 1.5rem;
     }
-
 
     h1 {
 
@@ -795,14 +744,11 @@ h3 {
         margin-right: 1.3rem;
     }
 
-
     .top-btn {
 
         height: 60px;
 
-        }
-
-
+    }
 
     .other-stories-container {
         margin: 0.5rem;
@@ -814,7 +760,6 @@ h3 {
         width: 100%;
         gap: 1rem;
     }
-
     
     .card {
         flex: 1;
@@ -837,7 +782,6 @@ h3 {
 
         padding-top: 1.2rem;
         font-size: 0.8rem;
-
     }
 
 
@@ -878,7 +822,6 @@ h3 {
         padding-right: 1.3rem;  
 
     }  
-    
         
     .menu {
 
@@ -907,40 +850,38 @@ h3 {
     .nav-list li {
 
         gap: 8%;
-
     }
-/* 1 */ .topstories-full-container {
+    
+    .topstories-full-container {
 
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        margin: 0.6rem;
+    }
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0.6rem;
-}
+    .topstories-section-container  {
 
-/* 2 */ .topstories-section-container  {
+        display: flex;
+        flex: 1;
+        flex-direction: row;
+        width: 100%;
+    }
 
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    width: 100%;
-}
+    .topstories-section-container > * {
+        flex-grow:1;
+    }
 
-    /* CHILDREN */ .topstories-section-container > * {
-    flex-grow:1;
-}
+    .top-section {
 
-.top-section {
-
-    height: 100%;
-}
+        height: 100%;
+    }
 
     .top-h1 {
 
         font-size: 1.5rem;
     }
     
-
     h1 {
 
         font-size: 2.5rem;
@@ -959,13 +900,10 @@ h3 {
         margin-right: 1.3rem;
     }
 
-
     .top-btn {
 
         height: 60px;
-
         }
-
 
 
     .other-stories-container {
@@ -979,7 +917,6 @@ h3 {
         gap: 1rem;
     }
 
-    
     .card {
         flex: 1;
         display: flex;
