--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,6 @@
 html, body {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
-  width: 100%;
   overflow-x: hidden;
 }
 
@@ -24,7 +23,6 @@ header {
 
 .container-with-logo-and-title {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 1em;
 }
@@ -35,17 +33,8 @@ header {
   border-radius: 50%;
 }
 
-.webpage-title h1, p {
+.webpage-title h2, p {
   color:rgb(238, 207, 207);
-}
-
-.big-text-tablet-desktop p {
-  color: rgba(24, 2, 43, 0.959);
-  font-size: 1.2rem;
-}
-
-.big-text-tablet-desktop h1 {
-  color:rgba(24, 2, 43, 0.733);
 }
 
 .hamburger-nav-mobile {
@@ -58,7 +47,7 @@ header {
 }
 
 #dropdown-menu {
-  transition: transform 0.3s;
+  transition: transform 0.5s;
   transform-origin: top;
 }
 
@@ -74,21 +63,32 @@ input:not(:checked) ~ #dropdown-menu {
   color: rgba(238, 207, 207);
 }
 
-ul {
+.hamburger-nav-mobile ul {
   list-style-type: none;
 }
 
-li {
-  background-color:rgba(238, 207, 207, 0.89);
+.hamburger-nav-mobile li {
+  background-color:rgba(238, 207, 207, 0.973);
   border-radius: 5px;
-  padding: 1rem;
-  font-size: 1rem;
-  color: rgba(24, 2, 43, 0.733);
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.hamburger-nav-mobile a {
+  color:rgba(11, 122, 173, 0.849);
+  text-decoration: none;
+}
+
+.hamburger-nav-mobile a:visited {
+  color: rgba(77, 175, 119, 0.808);
+}
+
+.hamburger-nav-mobile a:hover {
+  color: rgba(245, 245, 245, 0.884);
 }
 
 .navbar-tablet-desktop {
   display: flex;
-
 }
 
 .navbar-tablet-desktop a {
@@ -96,6 +96,15 @@ li {
   padding: 1em;
   color:rgb(238, 207, 207);
   font-size: 1.2rem;
+}
+
+.navbar-tablet-desktop a:visited {
+  color:rgba(157, 218, 183, 0.808);
+}
+
+.navbar-tablet-desktop a:hover {
+  text-decoration: none;
+  color:rgba(7, 103, 148, 0.938);
 }
 
 .big-news-container {
@@ -107,7 +116,7 @@ li {
 .big-news-image {
   width: 90%;
   margin-top: 1.5em;
-  border-radius: 5px;;
+  border-radius: 5px;
   box-shadow: 4px 5px 4px 3px rgba(0,0,0,.1);
 }
 
@@ -121,7 +130,28 @@ li {
   justify-content: center;
   margin-right: 2rem;
   padding: 1rem;
-  font-size: 1rem;
+}
+
+.big-text-tablet-desktop p {
+  color: rgba(24, 2, 43, 0.959);
+  font-size: 1.2rem;
+}
+
+.big-text-tablet-desktop h1 {
+  color:rgba(24, 2, 43, 0.733);
+}
+
+.big-text-tablet-desktop a {
+  text-decoration: none;
+  color:rgba(24, 2, 43, 0.959);
+}
+
+.big-text-tablet-desktop a:visited {
+  color:rgba(77, 175, 119, 0.808);
+}
+
+.big-text-tablet-desktop a:hover {
+  color:rgba(245, 245, 245, 0.884);
 }
 
 .big-text-mobile h1 {
@@ -129,7 +159,7 @@ li {
 }
 
 .big-text-mobile p {
-  color:rgba(24, 2, 43, 0.733);
+  color:rgba(24, 2, 43, 0.959);
 }
 
 .big-text-mobile {
@@ -143,6 +173,19 @@ li {
 .additional-content {
   display: none;
   transition: 0.5s linear;
+}
+
+.additional-content a {
+  text-decoration: none;
+  color:rgba(24, 2, 43, 0.959);
+}
+
+.additional-content a:visited {
+  color:rgba(11, 122, 173, 0.938);
+}
+
+.additional-content a:hover {
+  color:rgba(226, 117, 135, 0.911);
 }
 
 label {
@@ -195,6 +238,10 @@ label {
   box-shadow: 2px 2px 3px 3px rgba(0,0,0,.1);
 }
 
+.container-other-news a:hover {
+  background-color: rgba(245, 245, 245, 0.884);
+}
+
 .small-news p {
   color:rgba(24, 2, 43, 0.959);
   font-size: 1.3rem;
@@ -214,14 +261,8 @@ label {
   font-size: 1rem;
 }
 
-a:link a:visited {
-  text-decoration: none;
-  color: rgb(11, 94, 11);
-}
-
-a:hover, a:active {
-  text-decoration: none;
-  color:rgba(11, 122, 173, 0.938);
+.fa-facebook-square, .fa-instagram {
+  color:rgb(238, 207, 207);
 }
 
 /* mobile */
@@ -253,9 +294,6 @@ a:hover, a:active {
   .hamburger-nav-mobile {
     display: none;
   }
-  .navbar-tablet-desktop a {
-    padding: 0.5rem;
-  }
   .big-news-container {
     gap: 1rem;
     margin: 1rem 2.5rem 1rem 1rem;
@@ -286,6 +324,7 @@ a:hover, a:active {
   }
   .big-text-tablet-desktop {
     font-size: 1.5rem;
+    padding: 0 5rem;
   }
   .container-other-news {
     display: grid;
