--- a/code/style.css
+++ b/code/style.css
@@ -1,71 +1,73 @@
 /*General styles*/
 html {
-  background: #FFEDDB;
+  background: #dfe1ee;
   color: #fff;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
   display: flex; 
   flex-direction: column;
-  gap: 8px;
+  gap: 10px;
 }
 
 p {
-  size: 10px;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 20px;
+  color:#edb071;
 }
 
 h2 {
-  size: 9px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 17px;
 }
 
 button {
-  background-color: #E3B7A0;
+  background-color: #3d6d79;
   border: none;
-  padding: 5px;
+  padding: 10px;
   margin-top: 15px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #fff;
   font-size: 15px;
   border-radius: 50%;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  box-shadow: 10px 5px 5px #edb071;
 }
 
 button:hover {
-  background-color: #BF9270;
+  background-color: #87574b;
 }
 
 /*Header*/
 .flex-container-site-header {
   display: flex;
-  background-color: #E3B7A0;
+  background-color: #3d6d79;
   align-items: center; 
-  justify-content: space-between;
+  justify-content:space-between;
 }
 
 .logo {
   display: flex;
   flex-direction: column;
-  align-items:flex-start;
-}
-
-.logo img {
-  margin: 10px 0px 5px 20px;
-  max-height: 70px;
+  align-items: flex-start;
+  padding: 10px 0px 10px 40px;
 }
 
 .logo h1 {
-  font-weight: bold;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  padding: 0px 0px 0px 20px;
-  font-size: 25px;
-  margin: 0;
+  font-size: 30px;
+  margin: 2px 0px 2px 0px;
 }
 
 .logo h2 {
-  padding-left: 20px;
-  margin: 2px 0px 10px 0px;
-  font-size: 15px;
+  margin-top: 2px;
+}
+
+.logo img {
+  max-height: 80px;
+  /*background-color:#e7b687;*/
+  border-radius: 30%;
 }
 
 .navbar {
@@ -74,20 +76,19 @@ button:hover {
 }
 
 .nav-button {
-  height: 50px; 
-  width: 50px;
+  height: 40px; 
+  width: 40px;
 }
 
 /*Big news*/
 .big-news-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 70% 20% 10%;
-  margin-bottom: 150px;
+  grid-template-rows: 4fr 1fr 1fr;
 }
 
 .big-news-item {
-  background-color: #EDCDBB;
+  background-color:#649cae;
   grid-row: span 3;
 }
 
@@ -97,13 +98,10 @@ button:hover {
 }
 
 .big-news-item h1 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 20px;
 }
 
 .big-news-item p {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 16px;
   margin-left: 20px;
 }
 
@@ -116,9 +114,8 @@ button:hover {
   }
 
 .flex-child-news {
-  height: 400px;
   width: 100%;
-  background-color: #EDCDBB;
+  background-color: #649cae;
   display:flex;
   flex-direction: row;
   align-content:space-around;
@@ -127,79 +124,61 @@ button:hover {
 }
 
 .flex-child-news-img {
-  padding: 15px; 
+  padding: 20px; 
 }
-.flex-child-news img {
-  max-height: 350px;
-  max-width: auto;
 
+.flex-child-news img {
+  max-height: 280px;
+  
 }
  
 .flex-child-news-text {
   display: flex;
   padding: 15px;
   flex-direction: column;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .flex-child-news-text p {
-  align-self:flex-end;
+  align-self:flex-start;
 }
 
 /*iPad*/
 @media (min-width: 668px) and (max-width: 1024px) {
-  .flex-container-site-header {
-    display: flex;
-    background-color: #E3B7A0;
-    align-items: center; 
-    justify-content: space-between;
-  }
-  
-  .logo {
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
+  h1 {
+    font-size: 25px;
   }
   
   .logo img {
-    margin: 10px 0px 5px 20px;
-    max-height: 100px;
+    max-height: 90px;
   }
   
   .logo h1 {
-    font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 0px 0px 0px 20px;
     font-size: 40px;
-    margin: 0;
   }
   
   .logo h2 {
-    padding-left: 20px;
-    margin: 2px 0px 10px 0px;
     font-size: 20px;
-  }
-  
-  .navbar {
-    margin-right: 50px;
   }
   
   .nav-button {
     height: 50px; 
     width: 50px;
   }
+
   .big-news-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-bottom: 0px;
   }
+
   .picture-big-news-item {
     grid-row: span 6;
   }
+
   .h1-big-news-item {
     display: grid;
   }
+
   .h1-big-news-item h1 {
     align-self: flex-end;
   }
@@ -211,120 +190,82 @@ button:hover {
     }
   
   .flex-child-news {
-    height: 600px;
     width: 45%;
-    background-color: #EDCDBB;
     flex-grow: 1;
-    margin: 5px;
     display:flex;
     flex-direction: column;
-    align-content:space-around;
-    align-items: center;
     }
-    .flex-child-news-img {
-      padding: 5px; 
+
+  .flex-child-news img {
+    max-width: 250px;
     }
-    .flex-child-news img {
-      max-width: 250px;
-    
-    }
-    .flex-child-news-text {
-      display: flex;
-      padding: 15px;
-      flex-direction: column;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    .flex-child-news-text p {
-      align-self:flex-end;
+  
+  .flex-child-news-text {
+    display: flex;
+    padding: 15px;
+    flex-direction: column;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     }
  
 /*Desktop*/
 @media (min-width: 1025px) {
-  .flex-container-site-header {
-    display: flex;
-    background-color: #E3B7A0;
-    align-items: center; 
-    justify-content: space-between;
-  }
   .logo {
     display: flex;
     flex-direction: row;
     align-items:flex-end;
   }
+
+  .flex-item-header headline {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+  }
   
   .logo img {
-    margin: 10px 0px 5px 20px;
-    max-height: 80px;
+    max-height: 120px;
   }
   
   .logo h1 {
-    font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 0px 0px 0px 20px;
-    size: 80px;
-    margin-bottom: 20px;
+    font-size: 43px;
   }
   
   .logo h2 {
-    padding-left: 20px;
-    margin-bottom: 20px;
-    font-size: 15px;
+    font-size: 18px;
   }
   
-  .navbar {
-    margin-right: 50px;
-  }
-  
-  .nav-button {
-    height: 50px; 
-    width: 50px;
-  }
   .big-news-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-bottom: 0px;
     }
+
   .picture-big-news-item {
     grid-row: span 6;
     }
+
   .h1-big-news-item {
     display: grid;
     }
+
   .h1-big-news-item h1 {
     align-self: flex-end;
+    font-size: 35px;
     }
+
   .flex-parent-other-news {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: none;
     }
-  .flex-child-news {
-    height: 400px;
-    width: 24%;
-    background-color: #EDCDBB;
-    margin: 5px;
-    display:flex;
-    flex-direction: row;
-    align-content:space-around;
-    align-items: center;
-    }
-    .flex-child-news-img {
-      padding: 15px; 
-    }
-    .flex-child-news img {
-      max-height: 370px;
     
+  .flex-child-news {
+    width: 23%;
+    flex-direction: column;
+    flex-grow: 1;
     }
-    .flex-child-news-text {
-      display: flex;
-      padding: 15px;
-      flex-direction: column;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+  .flex-child-news img {
+    max-width: 200px;
     }
-    .flex-child-news-text p {
-      align-self:flex-end;
-    }
-    }
+  }
